--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -22,3 +22,9 @@ regex.workspace = true
 shaderc.workspace = true
 shaderc-sys.workspace = true
 tokio.workspace = true
+chrono.workspace = true
+colored.workspace = true
+once_cell.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+ansi_escapers.workspace = true
